# esp32-serial-logger

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  component.mk  webserver_ap.c
main/include/: common_config.h  local_webserver_apsta.h
main/public/: index.html
main/src/: local_webserver_apsta.c  main.c
